# AESOP-Data-Documentation

./: .readthedocs.yaml  DTB_BRASIL_MUNICIPIO.xls  README.rst  pyproject.toml
Data Collection/: APS.ipynb  Population.ipynb  SINAN Data collection.ipynb  SRAG.ipynb  SindromeGripal.ipynb  config.py  scriptSf.py
Data curation/: APS_SISAB.ipynb  Dengue database documentation.ipynb  Dengue_aps.ipynb  Documentation of Dengue database.ipynb  Population data.ipynb  SRAG_pandas_data cleaning and formatting.ipynb  SRAG_spark.ipynb  SRAG_spark_variable extraction.ipynb
DataPipeline/documentation/: Classification_Systems_Brazilian_PHC  code_list_arbovirus_apr2024.csv  dictionary_sisab.csv
DataPipeline/etl/: 00-aesop_csv_to_parquet.ipynb  00-aesop_csv_to_parquet.py  01-base-hpc-ivas.ipynb  01-base-hpc-ivas.py  02-gerar-dados-report-update.ipynb  02-gerar-dados-report-update.py  03-gerar-dados-report-dqi-validarcao_testes.ipynb  03-gerar-dados-report-dqi.ipynb  03-gerar-dados-report-dqi.py
DataPipeline/manuscript DQI/: 00-aesop_csv_to_parquet.ipynb  01-base-hpc-ivas.ipynb  01_ears.R  03-gerar-dados-report-dqi.ipynb  code_list_uri_apr2024.csv
DataPipeline/manuscript arboviroses/: 1_function_ears.R  1_functions_performance.R  2_ears_c1_phc.R  2_ears_c2_phc.R  3_main_matrix.R  4_ears_results_matrix.R
DataPipeline/models/: 00_funs.R  01_ears.R  02_glm.R  03_bayes.R  99_fix_problems.R  chamada_run_models.txt  run_models.sh
docs/source/: api.rst  biological.rst  conf.py  environmental.rst  health.rst  human_mobility.rst  index.rst  (+6 more)
files/: Dicionario_Ingles_IBP.csv
