[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
#name = "lumache"
name = "AESOP - Data descriptor"
#authors = [{name = "Graziella", email = "graziella@lumache"}]
authors = [{name = "Juliane", email = "julianlanzin@gmail.com"}]
dynamic = ["version", "description"]
